<resources>
    <string name="app_name">TicTacToe</string>
    <string name="logo_yellow">logo_yellow</string>
    <string name="tic_tac_toe">Tic-Tac-Toe</string>
    <string name="back_arrow">back_arrow</string>
    <string name="play">PLAY</string>
    <string name="settings">Settings</string>
    <string name="music_volume">Music Volume</string>
    <string name="quit">QUIT</string>
    <string name="player_x">Player - X</string>
    <string name="player_o">Player - O</string>
    <string name="x_won">X WON!!</string>
    <string name="o_won">O WON!!</string>
    <string name="draw">DRAW!!</string>
    <string name="reset_board">Reset Board</string>
    <string name="_22">22</string>
    <string name="_21">21</string>
    <string name="_20">20</string>
    <string name="_12">12</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="_02">02</string>
    <string name="_01">01</string>
    <string name="_00">00</string>
</resources>
